--- a/app/index.html
+++ b/app/index.html
@@ -142,7 +142,11 @@
     </div> 
     </main>
     <footer>
-
+        <div class="footer__wrapper">
+            <p> All Rights Reserved © 2014  architect.com - Interior Design & Architecture Magazine</p>
+            <img src="./images/vec1.png" alt="">
+            <img src="./images/vecv2.png" alt="">
+        </div>
     </footer>
     <script src="js/main.min.js"></script>
 </body>
